some more fixes

--- a/intro.tex
+++ b/intro.tex
@@ -10,10 +10,11 @@ political preferences, and income~\cite{narayanan2010myths, narayanan2008robust}
 Unfortunately, this data can 
 leak through numerous channels on both the server
 and client. As web systems become more complex, the 
-number of these channels continues to grow. Moreover,
-not only is there more data but also the number of 
+number of these channels continues to grow. 
+Not only is there more data but also the number of 
 applications that handle and access this data is growing.
-For example, on the server side, data can leak through breaches
+Here are some examples of the data leakage.
+On the server side, data can leak through breaches
 or be accessed by malicious service administrators. On the client side,
 sensitive user information can leak from the browser whenever
 a user accesses a web application. These scenarios raise an important
