--- a/splinter.tex
+++ b/splinter.tex
@@ -121,7 +121,7 @@ For all of our applications, Splinter can execute queries in less than 1.6 secon
 
 Splinter aims to protect sensitive information in users' queries
 from providers. This section provides an overview of Splinter's architecture,
-security goals, and threat model.
+use cases, security goals, and threat model.
 
 \subsubsection{Splinter Overview}
 \label{sec:model}
