--- a/n-conf.bib
+++ b/n-conf.bib
@@ -1077,6 +1077,13 @@
     address	= {Scottsdale, AZ},
 }
 
+@Proceedings{CCS15,
+	title	= POT # { 22nd } # CCS,
+	booktitle	= POT # { 22nd } # CCS,
+	month	= oct,
+	year	= 2015,
+	address	= {Denver, CO},
+}
 
 @Proceedings{USEC96,
     title	= POT # { 6th } # USEC,
@@ -1092,6 +1099,14 @@
     month	= jan,
     year	= 1998,
     address	= {San Antonio, TX},
+}
+
+@Proceedings{USEC00,
+	title	= POT # { 9th } # USEC,
+	booktitle	= POT # { 9th } # USEC,
+	month	= aug,
+	year	= 2000,
+	address	= {Denver, CO},
 }
 
 @Proceedings{USEC02,
@@ -1389,6 +1404,14 @@
     month	= may,
     year	= 2009,
     address	= {Oakland, CA},
+}
+
+@Proceedings{IEEESP11,
+	title	= POT # { 32nd } # IEEESP,
+	booktitle	= POT # { 32nd } # IEEESP,
+	month	= may,
+	year	= 2011,
+	address	= {Oakland, CA},
 }
 
 @Proceedings{IEEESP12,
