--- a/p.bib
+++ b/p.bib
@@ -1526,10 +1526,7 @@
 @InProceedings{privExec,
 	author = {K. Onarlioglu and C. Mulliner and W. Robertson and E. Kirda},
 	title = {{PrivExec: Private Execution as an Operating System Service}},
-	booktitle = {Proceedings of IEEE Symposium on Security and Privacy},
-	address = {San Francisco, CA},
-	month = {May},
-	year = {2013}
+	crossref = {IEEESP13}
 }
 
 % http://cs.brown.edu/research/plt/dl/incognito/lerner-esorics2013.pdf
@@ -1555,10 +1552,7 @@
 @InProceedings{ucognito,
 	author = {M. Xu and Y.Jang and X. Xing and T. Kim and W. Lee},
 	title = {{UCognito: Private Browsing without Tears}},
-	booktitle = {Proceedings of CCS},
-	address = {Denver, CO},
-	month = {October},
-	year = {2015},
+	crossref={CCS15}
 }
 
 @InProceedings{blaze93,
@@ -1570,11 +1564,9 @@
 @InProceedings{provos00,
 	author = {N. Provos},
 	title = {{Encrypting Virtual Memory}},
-	booktitle = {Proceedings of USENIX Security},
-	address = {Denver, CO},
-	month = {August},
-	year = {2000}
+	crossref = {USEC00}
 }
+	
 
 @Misc{cryptfs,
 	author = {E. Zadok and I. Badulescu and A. Shender},
@@ -1586,10 +1578,7 @@
 @InProceedings{wright09,
 	author = {C. Wright and S. Coull and F. Monrose},
 	title = {{Traffic Morphing: An Efficient Defense against Statistical Traffic Analysis}},
-	booktitle = {Proceedings of NDSS},
-	address = {San Diego, CA},
-	month = {February},
-	year = {2009},
+	crossref = {NDSS09}
 }
 
 % http://sip.cs.princeton.edu/pub/webtiming.pdf
@@ -1613,10 +1602,7 @@
 @InProceedings{sun02,
 	author = {Q. Sun and D. Simon and Y.M. Wang and W. Russell and V. Padmanabhan and L. Qiu},
 	title = {{Statistical Identification of Encrypted Web Browsing Traffic}},
-	booktitle = {Proceedings of IEEE Symposium on Security and Privacy},
-	address = {Berkeley, CA},
-	month = {May},
-	year = {2002}
+	crossref = {IEEESP02}
 }
 
 @InProceedings{cssHistoryAttack,
@@ -1631,10 +1617,7 @@
 @InProceedings{cssHistoryAttack2,
 	author = {Z. Weinberg and E. Chen and P. Jayaraman and C. Jackson},
 	title = {{I Still Know What You Visited Last Summer}},
-	booktitle = {Proceedings of IEEE Symposium on Security and Privacy},
-	address = {Oakland, CA},
-	month = {May},
-	year = {2011}
+	crossref = {IEEESP11}
 }
 
 % http://freehaven.net/anonbib/cache/LZCLCP_NDSS11.pdf
