some word smithing

--- a/splinter.tex
+++ b/splinter.tex
@@ -1545,7 +1545,7 @@ The cost of storage and running a web server can be amortized over requests.
 We found that most of our queries cost less than 0.005 cents. Map queries are a bit more costly,
 about 0.05 cents to run a shortest path query for NYC, because the amount of 
 computation required is higher. With the decreasing cost of cloud computing resources~\cite{decrease-aws},
-we expect costs to become even lower over time. Although there are other costs associated with running a web service,
+we expect even lower costs in the future. Although there are other costs associated with running a web service,
 our results show that Splinter's server-side computation costs are very reasonable.
 %Costs for Amazon AWS and other cloud services have been decreasing because
 %of innovation and competition~\cite{aws-decreasing}, and further improvements to the FSS protocol
